tdf#163251 Fix for missing flags in single click obj creation

Change-Id: I0f6e65c4cf3ad9cac3096144d8a0efec29030739
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/174420
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
Tested-by: Jenkins