sd/source/ui/func/fucon3d.cxx
@@ -377,7 +377,7 @@ bool FuConstruct3dObject::MouseButtonUp(const MouseEvent& rMEvt)
             ::tools::Rectangle aNewObjectRectangle(aClickPos, Size(nDefaultObjectSize, nDefaultObjectSize));
             rtl::Reference<SdrObject> pObjDefault = CreateDefaultObject(nSlotId, aNewObjectRectangle);
 
-            bReturn = mpView->InsertObjectAtView(pObjDefault.get(), *pPV);
+            bReturn = mpView->InsertObjectAtView(pObjDefault.get(), *pPV, SdrInsertFlags::SETDEFLAYER | SdrInsertFlags::SETDEFATTR);
         }
     }
     bReturn = FuConstruct::MouseButtonUp(rMEvt) || bReturn;
